Fix scrollbar style

--- a/styles/common.css
+++ b/styles/common.css
@@ -24,6 +24,16 @@
     --bg: var(--white2);
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--input-border);
+    border-radius: 3px;
+}
+
 .sans {
     font-family: "Montserrat", sans-serif;
 }
